--- a/client/styles.css
+++ b/client/styles.css
@@ -293,6 +293,7 @@ a {
   align-items: center;
   justify-content: center;
   z-index: 100;
+  visibility: visible;
   backdrop-filter: blur(5px);
 }
 
